# cs50ai

./: LICENSE  README.md
src-4-nim/: nim.py
src-4-shopping/: pyproject.toml
src-6-CFG-parser/: parser.py  pyproject.toml
src-6-CFG-parser/sentences/: 8.txt
src0-degrees/: pyproject.toml
src0-degrees/degrees/: degrees-deprecated.py  degrees.py  util.py
src0-titc-tac-toe/: tictactoe.py
src1-knights-knaves/: puzzle.py
src1-mineswepper/: minesweeper.py
src2-heredity/: heredity.py
src2-pagerank/: pagerank.py
src3-crossword/: crossword.py  generate.py  pyproject.toml
src4-shopping/: shopping.py
src5-traffic/: pyproject.toml  readme.md  traffic.py
src6-attention/: analysis.md  mask.py
