[tool.poetry]
name = "Shopping"
version = "0.1.0"
description = ""
authors = ["Jonathan Melo"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^10.4.0"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"