[tool.poetry]
name = "Crossword"
version = "0.1.0"
description = ""
authors = ["Jonathan Melo"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"