[tool.poetry]
name = "traffic"
version = "0.1.0"
description = ""
authors = ["Jonathan Melo"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^10.4.0"
scikit-learn = "^1.5.2"
tensorflow = "^2.18.0"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"